# google-deepmind-hackathon-devpost-2026

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  HACKATHON_WRITEUP.md  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  test_genesis.py
.claude/skills/pre-commit-validation/: SKILL.md
.claude/skills/python-imports/: SKILL.md
.claude/skills/test-ci-locally/: SKILL.md
.github/workflows/: ci.yml
archive/: alignment_navigation_mvp.py  alignment_test_results.json  g1_alignment_demo.py  g1_gemini_alignment_demo.py  gemini_mujoco_poc.py  gemini_pybullet_poc.py  humanoid_alignment_demo.py  render_humanoid.py  render_preview.py  replay_trajectory.py  run_g1_walking.py  watch_alignment_demo.py  watch_g1_walk.py
archive/docker/: .dockerignore  docker-compose.yaml  nav2_default_view.rviz  nav2_params.yaml  slam_toolbox_params.yaml
archive/docker/docker/: Dockerfile.ros2_nav2
archive/logs/: g1_alignment_results_20260110_100215.json  g1_alignment_results_20260110_100338.json  g1_results_20260110_093512.json  humanoid_results_20260110_090316.json  results_20260108_111543.json  results_20260108_111938.json  results_20260108_115913.json  results_20260108_120734.json  results_20260108_121219.json  results_20260108_123708.json
archive/mujoco/: interactive_alignment_demo.py  main.py  robot.py  simulation.py
archive/ros2/: ros2_bridge.py
configs/training/: g1_locomotion.yaml
docker/: Dockerfile.ros2_nav2  ros_entrypoint.sh
experiments/forbidden_zone_basic/: experiment_log.txt  summary.md
src/: __init__.py  config.py  gemini_client.py  gemini_reward.py  logger.py  main.py  robot.py  ros2_main.py  simulation.py
src/genesis/: __init__.py  g1_env.py  train.py
src/scenarios/: forbidden_zone.yaml
tests/: conftest.py  test_config.py  test_g1_sensors.py
unitree_rl_gym/resources/robots/g1_description/: g1_12dof.xml  scene_alignment.xml
